# yelp-xsl

./: .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  NEWS  README.md  autogen.sh  changes  configure.ac  configure.in  localbuild.sh  meson.build  meson_options.txt  yelp-xsl.doap  yelp-xsl.pc.in
doc/: Makefile.am  meson.build
doc/xslt/: xsldoc-scan  xsldoc-scan.awk  xsldoc-scan.xsl
doc/yelp-xsl/: Makefile.am  mal2cache  meson.build  xsldoc-check.xsl  xsldoc-docbook.xsl  xsldoc-scan.awk  xsldoc-scan.xsl  xsldoc.xsl
doc/yelp-xsl/C/: color.a.page  color.b.page  color.background.page  color.bg.blue.page  color.bg.dark.page  color.bg.gray.page  color.bg.green.page  color.bg.orange.page  color.bg.page  color.bg.purple.page  color.bg.red.page  color.bg.yellow.page  color.blend.page  color.blue.page  color.blue_background.page  color.blue_border.page  color.contrast.page  color.dark_background.page  color.fg.blue.page  color.fg.dark.page  color.fg.gray.page  color.fg.green.page  color.fg.orange.page  color.fg.page  color.fg.purple.page  color.fg.red.page  color.fg.yellow.page  color.g.page  color.gray.page  color.gray_background.page  color.gray_border.page  color.green.page  color.hex2dec.page  color.link.page  color.link_visited.page  color.orange.page  color.page  color.purple.page  color.r.page  color.red.page  (+361 more)
doc/yelp-xsl/de/: de.po
doc/yelp-xsl/static/: index.duck  keys.duck  modes.duck  params.duck  stubs.duck  stylesheets.duck  templates.duck
icons/hicolor/: Makefile.am  watermark-blockquote.xcf
icons/hicolor/24x24/status/: Makefile.am
icons/hicolor/48x48/status/: Makefile.am
icons/hicolor/scalable/status/: Makefile.am
icons/hicolor/watermarks/: Makefile.am
js/: Makefile.am  README.duck  ducktype.js  highlight.pack.js  meson.build  syntax.html
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  (+63 more)
po/its/: yelp-xsl.its  yelp-xsl.loc
test/: meson.build
test/api/: c_func1.page  c_func2.page  c_func3.page  c_func4.page  c_property1.page  c_signal1.page  c_type1.page  func1.page  func2.page  func3.page  index.page  js_func1.page  js_func2.page  js_func3.page  js_type1.page  py_func1.page  py_func2.page  py_func3.page  py_type1.page  test.sh  type1.page
test/colors/: Makefile  README  build.sh  meson.build  testcolors.xsl
test/docbook/: README  build.sh
test/docbook/source/: bibliography.xml  blocks.xml  cals-tables.xml  classsynopsis.xml  funcsynopsis.xml  glossary.xml  idx.xml  index.docbook  inline.xml  lists.xml  reference.xml
test/lipsum/: README  index.page  note1.page  task1.page
test/mallard/: README  build.sh
test/mallard/source/: credit1.page  index.page  note1.page  task1.page
test/syntax/: Makefile  README  build.sh  dita.dita  docbook.docbook  mallard.page  meson.build
test/syntax/code/: asciidoc  cs  ducktype
test/syntax/source/: dita.dita  docbook.docbook  mallard.page
test/testbook/: meson.build  testbook.xml
test/testdocs/: Makefile  README  db2html.xsl  epigraph.001.xml  index.x001.xml  inline.x001.xml
xslt/: Makefile.am  meson.build
xslt/common/: Makefile.am  color.xsl  html.xsl  icons.xsl  l10n-numbers.xsl  l10n.xsl  meson.build  tmpl.xsl  ttml.xsl  utils.xsl
xslt/common/css/: Makefile.am  README  core.css.tmpl  docbook.css.tmpl  elements.css.tmpl  mallard-editor.css.tmpl  mallard.css.tmpl  meson.build  syntax.css.tmpl
xslt/common/domains/: Makefile.am  check.xsl  meson.build  msgs.xsl  yelp-xsl.pot  yelp-xsl.xml.in
xslt/common/icons/: Makefile.am  meson.build
xslt/dita/common/: dita-map.xsl  dita-ref.xsl  dita-selectors.mod  meson.build
xslt/dita/html/: dita2html-block.xsl  dita2html-inline.xsl  dita2html-list.xsl  dita2html-media.xsl  dita2html-table.xsl  dita2html-topic.xsl  dita2html.xsl  dita2xhtml.xsl  meson.build  selectors.mod
xslt/docbook/: Makefile.am  meson.build
xslt/docbook/common/: Makefile.am  db-chunk.xsl  db-common.xsl  db-label.xsl  db-profile.xsl  db-selectors.mod  db-title.xsl  db-xref.xsl  meson.build
xslt/docbook/html/: Makefile.am  db2html-autotoc.xsl  db2html-bibliography.xsl  db2html-block.xsl  db2html-callout.xsl  db2html-classsynopsis.xsl  db2html-cmdsynopsis.xsl  db2html-css.xsl  db2html-division.xsl  db2html-ebnf.xsl  db2html-footnote.xsl  db2html-funcsynopsis.xsl  db2html-index.xsl  db2html-info.xsl  db2html-inline.xsl  db2html-l10n.xsl  db2html-links.xsl  db2html-list.xsl  db2html-math.xsl  db2html-media.xsl  db2html-qanda.xsl  db2html-refentry.xsl  db2html-suppressed.xsl  db2html-table.xsl  db2html-title.xsl  db2html-xref.xsl  db2html.xsl  db2xhtml.xsl  meson.build
xslt/docbook/omf/: Makefile.am
xslt/docbook/utils/: Makefile.am  graphics.xsl
xslt/gettext/: Makefile.am  gettext.xsl  l10n.xml.in
xslt/gettext/domains/: Makefile.am  yelp-xsl.pot  yelp-xsl.xml.in
xslt/mallard/: Makefile.am  meson.build
xslt/mallard/cache/: Makefile.am  mal-cache.xsl  meson.build
xslt/mallard/common/: Makefile.am  mal-gloss.xsl  mal-if.xsl  mal-link.xsl  mal-sort.xsl  meson.build
xslt/mallard/html/: Makefile.am  mal2html-api.xsl  mal2html-block.xsl  mal2html-css.xsl  mal2html-facets.xsl  mal2html-gloss.xsl  mal2html-inline.xsl  mal2html-links.xsl  mal2html-list.xsl  mal2html-math.xsl  mal2html-media.xsl  mal2html-page.xsl  mal2html-svg.xsl  mal2html-table.xsl  mal2html-ui.xsl  mal2html.xsl  mal2xhtml.xsl  meson.build
xslt/mallard/utils/: Makefile.am  mal2cache.xsl
xslt/theme/: Makefile.am  test-theme.xslt  theme-colors.xsl  theme-html.xsl  theme-icons.xsl
