AC_INIT([yelp-xsl], [0.99.1],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-doc-utils])
AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

AC_CONFIG_MACRO_DIR([m4])

dnl  In the interest of portability, we don't use GNU awk extensions,
dnl  even though they rule.  To prevent accidental use and subsequent
dnl  bug reports after busted tarballs were shipped, we use -W compat
dnl  whenever our awk is gawk.
AC_PROG_AWK
if test x$AWK = xgawk; then
   YELP_XSL_AWK='gawk -W compat';
else
   YELP_XSL_AWK=$AWK;
fi
AC_SUBST(YELP_XSL_AWK)

PKG_CHECK_MODULES(YELP_XSL,
[
	libxml-2.0 >= 2.6.12
	libxslt    >= 1.1.8
])

GETTEXT_PACKAGE=yelp-xsl
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

IT_PROG_INTLTOOL([0.35.0])
AM_GLIB_GNU_GETTEXT

AC_ARG_ENABLE(doc,
              [AC_HELP_STRING([--enable-doc],
                              [build and install developer documentation [default=no]])],,
              enable_doc=no)
AM_CONDITIONAL(ENABLE_DOC, test "x$enable_doc" != "xno")  

AC_CONFIG_FILES([
Makefile
yelp-xsl.pc
data/Makefile
data/icons/Makefile
data/icons/hicolor/Makefile
data/icons/hicolor/48x48/Makefile
data/icons/hicolor/48x48/status/Makefile
data/icons/hicolor/scalable/Makefile
data/icons/hicolor/scalable/status/Makefile
data/templates/Makefile
data/watermarks/Makefile
doc/Makefile
doc/yelp-xsl/Makefile
po/Makefile.in
xslt/Makefile
xslt/common/Makefile
xslt/docbook/Makefile
xslt/docbook/common/Makefile
xslt/docbook/html/Makefile
xslt/docbook/omf/Makefile
xslt/docbook/utils/Makefile
xslt/mallard/Makefile
xslt/mallard/cache/Makefile
xslt/mallard/common/Makefile
xslt/mallard/html/Makefile
xslt/gettext/Makefile
])

AC_OUTPUT

dnl ==========================================================================
echo "
yelp-xsl-$VERSION:

	prefix:                   ${prefix}

	Documentation:            ${enable_doc}
"
