jsdir = $(datadir)/yelp-xsl/js

js_DATA =					\
	jquery.js				\
	jquery.syntax.brush.apache.js		\
	jquery.syntax.brush.applescript.js	\
	jquery.syntax.brush.assembly.js		\
	jquery.syntax.brush.bash-script.js	\
	jquery.syntax.brush.bash.js		\
	jquery.syntax.brush.basic.js		\
	jquery.syntax.brush.clang.js		\
	jquery.syntax.brush.csharp.js		\
	jquery.syntax.brush.css.js		\
	jquery.syntax.brush.diff.js		\
	jquery.syntax.brush.go.js		\
	jquery.syntax.brush.haskell.js		\
	jquery.syntax.brush.html.js		\
	jquery.syntax.brush.io.js		\
	jquery.syntax.brush.java.js		\
	jquery.syntax.brush.javascript.js	\
	jquery.syntax.brush.kai.js		\
	jquery.syntax.brush.lisp.js		\
	jquery.syntax.brush.lua.js		\
	jquery.syntax.brush.ocaml.js		\
	jquery.syntax.brush.ooc.js		\
	jquery.syntax.brush.pascal.js		\
	jquery.syntax.brush.perl5.js		\
	jquery.syntax.brush.php-script.js	\
	jquery.syntax.brush.php.js		\
	jquery.syntax.brush.plain.js		\
	jquery.syntax.brush.protobuf.js		\
	jquery.syntax.brush.python.js		\
	jquery.syntax.brush.ruby.js		\
	jquery.syntax.brush.scala.js		\
	jquery.syntax.brush.smalltalk.js	\
	jquery.syntax.brush.sql.js		\
	jquery.syntax.brush.super-collider.js	\
	jquery.syntax.brush.xml.js		\
	jquery.syntax.brush.yaml.js		\
	jquery.syntax.core.js			\
	jquery.syntax.layout.yelp.js		\
	jquery.syntax.js

EXTRA_DIST = $(js_DATA)
