yelp_xslt_common_css_data = [
  'css/core.css.tmpl',
  'css/docbook.css.tmpl',
  'css/elements.css.tmpl',
  'css/mallard.css.tmpl',
  'css/mallard-editor.css.tmpl',
  'css/syntax.css.tmpl',
]

install_data(
  yelp_xslt_common_css_data,
  install_dir: join_paths(
    pkgxsltdir,
    'common',
    'css',
  )
)
