yelp_xslt_common_icons_data = [
  'yelp-note-advanced.svg',
  'yelp-note-bug.svg',
  'yelp-note-important.svg',
  'yelp-note-note.svg',
  'yelp-note-package.svg',
  'yelp-note-tip.svg',
  'yelp-note-warning.svg',
]

install_data(
  yelp_xslt_common_icons_data,
  install_dir: join_paths(
    pkgxsltdir,
    'common',
    'icons',
  )
)
