yelp_xslt_dita_html_data = [
  'dita2html-block.xsl',
  'dita2html-inline.xsl',
  'dita2html-list.xsl',
  'dita2html-media.xsl',
  'dita2html-table.xsl',
  'dita2html-topic.xsl',
  'dita2html.xsl',
  'dita2xhtml.xsl',
]

install_data(
  yelp_xslt_dita_html_data,
  install_dir: join_paths(
    pkgxsltdir,
    'dita',
    'html',
  )
)

yelp_xslt_dita_html_test_data = files(
  'dita2html.xsl',
  'dita2xhtml.xsl',
)