xsldir=$(datadir)/yelp-xsl/xslt/mallard/html

xsl_DATA =				\
	mal2html-api.xsl		\
	mal2html-block.xsl		\
	mal2html-facets.xsl		\
	mal2html-gloss.xsl		\
	mal2html-inline.xsl		\
	mal2html-links.xsl		\
	mal2html-list.xsl		\
	mal2html-math.xsl		\
	mal2html-media.xsl		\
	mal2html-page.xsl		\
	mal2html-svg.xsl		\
	mal2html-table.xsl		\
	mal2html-ui.xsl			\
	mal2html.xsl			\
	mal2xhtml.xsl

EXTRA_DIST=$(xsl_DATA)
