icondir = $(datadir)/yelp-xsl/icons/hicolor/48x48/status
icon_DATA =				\
	yelp-note.png			\
	yelp-note-bug.png		\
	yelp-note-important.png		\
	yelp-note-tip.png		\
	yelp-note-warning.png		\
	yelp-quote-00AB.png		\
	yelp-quote-00BB.png		\
	yelp-quote-201C.png		\
	yelp-quote-201D.png		\
	yelp-quote-201E.png

EXTRA_DIST = $(icon_DATA)
